--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.5",
     "concurrently": "^7.5.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
