--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.5",
     "concurrently": "^7.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.5",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
